// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "children": undefined,
      "content": Object {
        "align": undefined,
        "indent": 1,
      },
      "subtype": "ObojoboDraft.Chunks.Text.TextLine",
      "type": "ObojoboDraft.Chunks.Text",
    },
    Object {
      "children": undefined,
      "content": Object {
        "align": "left",
        "indent": 0,
      },
      "subtype": "ObojoboDraft.Chunks.Text.TextLine",
      "type": "ObojoboDraft.Chunks.Text",
    },
  ],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "indent": 1,
        },
        "text": Object {
          "value": "mockText",
        },
      },
      Object {
        "text": Object {
          "value": "mockText2",
        },
      },
    ],
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Text editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "align": Object {},
          "indent": Object {},
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockText",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Text editor slateToObo converts a Slate node to an OboNode with triggers 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "align": Object {},
          "indent": Object {},
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockText",
        },
      },
    ],
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
